@@ -20,15 +20,9 @@ KEYSTORE=$BASEDIR/config/keystore.jks
 TRUSTSTORE=$BASEDIR/config/truststore.jks
 PASSWORD="changeit"
 
-java -Xmx1536m -XX:MaxPermSize=256m -Djava.net.preferIPv4Stack=true  \
-	-Dapp.home="$BASEDIR" \
-	-Dbasedir="$BASEDIR" \
+java -Xmx1024m -Djava.net.preferIPv4Stack=true  \
+    -Dbasedir="$BASEDIR" \
 	-Djava.util.logging.config.file="$BASEDIR/config/logging.properties" \
 	-Dcom.sun.xml.bind.v2.runtime.JAXBContextImpl.fastBoot=true \
-        -Djavax.net.ssl.keyStore=$KEYSTORE \
-        -Djavax.net.ssl.keyStorePassword=$PASSWORD \
-        -Djavax.net.ssl.trustStore=$TRUSTSTORE \
-        -Djavax.net.ssl.trustStorePassword=$PASSWORD \
 	-jar target/dds.jar \
-	-ddsConfigFile config/dds.xml \
 	$*
